# ecommerce-customer-segmentation

./: .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
reports/: metrics.json  segment_profiles.csv
src/segmentation/: __init__.py  cluster.py  data.py  evaluate.py  features.py  profile.py  run.py
tests/: test_segmentation.py
